--- a/index.html
+++ b/index.html
@@ -1,1 +1,100 @@
-# poojam102.github.io
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Profile - Computer Science Researcher</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            background: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .profile-header {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .profile-header img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            margin-right: 20px;
+        }
+        .profile-header h1 {
+            margin: 0;
+        }
+        .profile-header p {
+            color: #555;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .section h2 {
+            margin-bottom: 10px;
+            color: #333;
+        }
+        .section p {
+            line-height: 1.6;
+            color: #666;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="profile-header">
+            <img src="profile-photo.jpg" alt="Profile Photo">
+            <div>
+                <h1>Dr. [Your Name]</h1>
+                <p>Computer Science Researcher</p>
+            </div>
+        </div>
+
+        <div class="section">
+            <h2>About Me</h2>
+            <p>
+                I am a passionate computer science researcher specializing in [your specialization]. 
+                My work focuses on [briefly describe your research interests and areas of expertise].
+            </p>
+        </div>
+
+        <div class="section">
+            <h2>Research Interests</h2>
+            <p>
+                - Artificial Intelligence and Machine Learning<br>
+                - Data Science and Big Data<br>
+                - Cybersecurity<br>
+                - [other interests]
+            </p>
+        </div>
+
+        <div class="section">
+            <h2>Publications</h2>
+            <p>
+                1. [Title of Paper], [Journal/Conference], [Year]<br>
+                2. [Title of Paper], [Journal/Conference], [Year]<br>
+                3. [Title of Paper], [Journal/Conference], [Year]
+            </p>
+        </div>
+
+        <div class="section">
+            <h2>Contact Information</h2>
+            <p>
+                Email: [your.email@example.com]<br>
+                LinkedIn: <a href="[your LinkedIn profile]">[your LinkedIn]</a><br>
+                Twitter: <a href="[your Twitter profile]">[@yourTwitter]</a><br>
+                [Other contact info]
+            </p>
+        </div>
+    </div>
+</body>
+</html>
+
